--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi calculadora</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
             </div>
 
             <h3 class="subtitle" id="res">0</h3>
-            
+
         </form>
     </div>
 
