Se cambiaron algunos subtitulos

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <h1 class="title">Calculadora</h1>
 
         <form action="" method="" class="container-calculadora">
-            <label for="val1" class="subtitle">Ingrese el primer numero:</label><br>
+            <label for="val1" class="subtitle">Ingrese el primer valor:</label><br>
             <input type="number" name="val1" id="val1" class="input-calculadora"><br>
 
-            <label for="val2" class="subtitle">Ingrese el segundo numero:</label><br>
+            <label for="val2" class="subtitle">Ingrese el segundo valor:</label><br>
             <input type="number" name="val2" id="val2" class="input-calculadora"><br>
     
             <div class="contenedor-botones">
